Creating the Mood Stub Service