@@ -2,13 +2,17 @@ package com.mechanitis.demo.sense.user;
 
 import com.mechanitis.demo.sense.service.test.StubService;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
 public class UserTestData {
     private static final List<String> EXAMPLE_HANDLES =
-            List.of("aaa", "bbb", "ccc", "ddd", "eee", "fff", "gee", "ggg", "hhh", "iii", "jjj", "kkk", "lll", "mmm",
-                    "nnn", "ooo", "ppp", "qqq", "rrr", "sss", "ttt", "uuu", "vvv", "www", "xxx", "yyy", "zzz");
+            Arrays.asList("aaa", "bbb", "ccc", "ddd", "eee",
+                    "fff", "gee", "ggg", "hhh", "iii", "jjj",
+                    "kkk", "lll", "mmm", "nnn", "ooo", "ppp",
+                    "qqq", "rrr", "sss", "ttt", "uuu", "vvv",
+                    "www", "xxx", "yyy", "zzz");
 
     private static final Random random = new Random();
 
